--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #bank-service api config
-bankService.url=http://127.0.0.1:8030/api/v1/bank-service
+bankService.url=http://127.0.0.1:8030/api
 bankService.connection.timeout.ms=2000
 bankService.socket.timeout.ms=10000
 bankService.auth.key=auth-key
