--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,4 +11,6 @@ bankService.auth.key=auth-key
 bankService.api.path.card=/card-service
 bankService.api.path.account=/account-service
 
-
+#logging
+logging.file.path=.
+logging.file.name=atm-logs.log
